# cable_cpp

./: .gitignore  README.md
muc_interface/: CMakeLists.txt  README.md  ai_shape_inferance.h  ai_shape_inference.h  ai_shape_inference_mcu.cpp  ai_shape_inference_pc.cpp  alg_cable_tem_detector.cpp  alg_cable_tem_detector.h  alg_cable_tem_detector_interface.cpp  alg_cable_tem_detector_interface.h  file_copy.sh  main.cpp  main_mcu.cpp  main_mcu_log.cpp  main_pc_tflite_debug.cpp
muc_interface/data/: 1：41s后点火 31s报警 中间位置 20240623.CSV  test.CSV  test_index.txt
scripts/: README.md  deploy.py  gen_test_model.py  imagenet_classes_ch.txt  onnx2tflite.py  timm_example.py
scripts/accuracy_test/: gen_simple_tflite.py  simple_torch_model.py  validate_tflite_model.py
scripts/layers/: activations_layers.py  common_layers.py  conv_layers.py  deformation_layers.py  mathematics_layers.py
scripts/utils/: builder.py  dataloader.py  onnx_loader.py
scripts2/: log2csv.py
